# gitjournal

./: .gitignore  Cargo.toml  README.md
htmljs/: .config.js.example  config.js.example  exceptions.js  gitjournal.html
node/: .env  .env.example  exceptions.js  package-lock.json  package.json  server.js
node/data/: exceptions.json
node/public/: exceptions.js  gitjournal.html
node/views/: _commitRow.ejs  _editEntry.ejs  _githublogo.ejs  index.ejs  layout.ejs
src/: cli.rs  main.rs  model.rs
