[package]
name = "gitjournal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
calamine = "0.26.1"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
log = "0.4.22"
octocrab = "0.42.0"
simple_logger = { version="5.0.0",features = ["colored"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
